# sk

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  启动三鉴.command
.claude/: settings.json
.claude/agents/: compliance-auditor.md  debate-orchestrator.md  paipan-dev.md  prompt-engineer.md  test-guardian.md
.claude/hooks/: golden-smoke.sh  pre-commit-gate.sh  redline-scan.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml  nightly-duipai.yml
app/: README.md
backend/: README.md  app.py
codex/tasks/: pr-reviewer.md  ref-implementer.md
consult-engine/: README.md  consult.py  dossier.py  gateway.py  luck.py  predictions.py  records.py  solar.py
contracts/: CHANGELOG.md  README.md  claim.schema.json  paipan-spec.md  paipan.schema.json
contracts/public-fixtures/: four-pillars-protocol-example.jsonl
contracts/schemas/: claim.schema.json  consultation-manifest.schema.json  paipan.schema.json  run-manifest.schema.json
docs/: DESIGN.md  dev-plan.md  paipan-spec.md
docs/prereg/: barnum-2026-07-14.md
engine-paipan/: Cargo.toml
engine-paipan-ref/: README.md
engine-paipan/src/: four_pillars.rs  ganzhi.rs  lib.rs  year_pillar.rs
engine-paipan/tests/: four_pillars.rs  year_pillar.rs
evals/: README.md  metrics.py
golden-tests/: README.md
governance/: ai-invariants.yaml  attestation-template.yaml  claude-overlay.md  codex-overlay.md  model-routing.yaml  role-separation.yaml
infra/: README.md  ci-staging.yml
prompts/: README.md
rulebase/: README.md
security/: data-classification.md  vendor-register.yaml
web/: README.md  index.html
(+95 files in other folders)
