[package]
name = "engine-paipan"
version = "0.1.0"
edition = "2021"
description = "三鉴 L1 排盘引擎：零 AI 依赖的确定性计算库"
publish = false

[[bin]]
name = "paipan-cli"
path = "src/bin/paipan_cli.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
proptest = "1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
